--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
 spring.application.name=Retailer
-spring.datasource.url=jdbc:mysql://localhost:3306/retailer
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.platform = h2
+spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl = true
+
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/retailer
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
