--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,25 @@
 spring.application.name=Retailer
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.platform=h2
-spring.datasource.initialization-mode=always
+#MySql Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/retailer
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-#
-#spring.datasource.url=jdbc:mysql://localhost:3306/retailer
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.initialization-mode=always
+spring.datasource.data=classpath:data.sql
+
+#h2 console configuration
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.platform=h2
+#spring.datasource.initialization-mode=always
 #spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.generate-ddl=true
+
+# H2 console configuration
+#spring.h2.console.enable = true
+##spring.h2.console.path=/h2-console
