--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:data.sql
+spring.sql.init.mode=always
 
 #h2 console configuration
 #spring.datasource.url=jdbc:h2:mem:testdb
